# yannickmuellerdev

./: .gitignore  .gitmodules  README.md
FastAPI/: App.sql  Dockerfile  README.md  pyproject.toml  requirements.txt
FastAPI/src/rye_yannickmueller_dev/: __init__.py  capt.py  db.py  serve.py
FastAPI/src/rye_yannickmueller_dev/static/: style.css
FastAPI/src/rye_yannickmueller_dev/templates/: login.html  main.html  signup.html
