[project]
name = "rye-yannickmueller-dev"
version = "0.0.1"
description = "Add your description here"
authors = [{ name = "Yannick Mueller", email = "trompete.yannick@gmail.com" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "gunicorn>=21.2.0",
    "jinja2>=3.1.3",
    "mariadb>=1.1.10",
    "python-multipart>=0.0.9",
    "captcha>=0.5.0",
    "starlette_context>=0.3.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pylint>=3.1.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_yannickmueller_dev"]

[tool.rye.scripts]
serve = "gunicorn serve:api --reload --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:8089"
